@@ -61,7 +61,7 @@ dt {
 <td><a href="#g_damageBonusTotalMedics">g_damageBonusTotalMedics</a></td>
 <td><a href="#g_spoofOptions">g_spoofOptions</a></td>
 <td><a href="#g_spreeOptions">g_spreeOptions</a></td>
-<td><a href="#top">&nbsp;</a></td>
+<td><a href="#omnibot_flags">omnibot_flags</a></td>
 </tr>
 </table>
 
@@ -2783,6 +2783,8 @@ Once there are g_bot_minPlayers human players playing on the server there will b
 	<dd>Bots are granted shrubbot command immunity (the same as shrubbot flag !)
 	<dt>131072
 	<dd>Bots cannot be !kicked or !banned
+	<dt>262144
+	<dd>Disable bots shrubbot greeting
 	</dl>
 <p>Default is 0</p>
 
